some improvement of the university

--- a/_includes/front/header.html
+++ b/_includes/front/header.html
@@ -1,11 +1,11 @@
-<header>
+<header style="background-image: url('/img/mars/mars-dune.jpg');height: 100%;background-position: center;background-repeat: no-repeat;background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-sm-7">
                 <div class="header-content">
                     <div class="header-content-inner">
                         <h1>行星大学</h1>
-                        <p>行星大学，Planetary University，是火星上第一所综合性大学。行星大学由星际移民中心组建和维护。</p>
+                        <p>行星大学，Planetary University，是火星上第一所综合性大学。<br>我们探索人类的太空文明。</p>
                         <a href="#explore" class="btn btn-outline btn-xl page-scroll">了解我们</a>
                     </div>
                 </div>
