--- a/_includes/front/join.html
+++ b/_includes/front/join.html
@@ -11,7 +11,7 @@
 
       <fieldset class="form-group col-sm-6">
 
-        <input class="form-control" type="text" id="company-form[email]" name="fields[email]" placeholder="邮箱（用于联系作者）；必填" required/>
+        <input class="form-control" type="text" id="company-form[email]" name="fields[email]" placeholder="邮箱（用于联系作者，不会显示在网站）；必填" required/>
 
 
       </fieldset>
@@ -66,7 +66,7 @@
 
 
     <fieldset class="form-group row">
-      <button id="company--button" type="submit" class="btn btn-dark btn-lg" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="点击后会跳转到 GitHub 待审核的企业列表，可以添加后续评论。如跳转失败请使用科学上网。" style="color:black;">
+      <button id="company--button" type="submit" class="btn btn-lg" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="点击后会跳转到 GitHub 待审核的企业列表，可以添加后续评论。如跳转失败请使用科学上网。">
         提交
       </button>
 
