--- a/_includes/front/nav.html
+++ b/_includes/front/nav.html
@@ -15,16 +15,10 @@
                   <a class="page-scroll" href="/funds">Help the project</a>
               </li> -->
                 <li>
-                    <a class="page-scroll" href="#explore">我们</a>
-                </li>
-                <li>
                     <a class="page-scroll" href="#features">愿景</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#you">你来</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#go">合作</a>
+                    <a class="page-scroll" href="#you">加入</a>
                 </li>
                 <li>
                     <a href="/members/">成员</a>
