--- a/_includes/front/explore.html
+++ b/_includes/front/explore.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading">探索行星大学</h2>
-                <p>无止境，行者之路。</p>
+                <p>我们坚信人类终将地走向太空</p>
                 <div class="badges">
                    <!-- <p>
                       火星的未来，我们掌握。你们的未来，在这里启航。
