--- a/_includes/front/go.html
+++ b/_includes/front/go.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">合作</h2>
+                <h2 class="section-heading">联系我们</h2>
                 <hr class="primary">
                 <br />
             </div>
