--- a/_includes/members/header-members.html
+++ b/_includes/members/header-members.html
@@ -1,4 +1,4 @@
-<header>
+<header style="background-image: url('/img/mars/mars-with-trees.jpg');height: 100%;background-position: center;background-repeat: no-repeat;background-size: cover;">
     <div class="container">
         <div class="row">
             <div class="col-sm-7">
