--- a/_includes/front/join.html
+++ b/_includes/front/join.html
@@ -66,7 +66,7 @@
 
 
     <fieldset class="form-group row">
-      <button id="company--button" type="submit" class="btn btn-lg" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="点击后会跳转到 GitHub 待审核的企业列表，可以添加后续评论。如跳转失败请使用科学上网。">
+      <button id="company--button" type="submit" style="color:#fdcc52;" class="btn btn-lg" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="点击后会跳转到 GitHub 待审核的企业列表，可以添加后续评论。如跳转失败请使用科学上网。">
         提交
       </button>
 
