--- a/_includes/front/services.html
+++ b/_includes/front/services.html
@@ -27,35 +27,49 @@
                 <div class="col-md-12">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-6">
-                               <div class="feature-item">
-                                   <img src="assets/icons/space/40-telescope.svg" style="width:60%;">
-                                   <h3>基础科学</h3>
-                                   <p class="text-muted">泛太阳系基础科学合作，更长的基线。</p>
-                               </div>
-
+                            <div class="col-md-4">
+                                    <div class="feature-item">
+                                        <img src="assets/icons/space/48-ufo.svg" style="width:60%;">
+                                        <h3>太空资源</h3>
+                                        <p class="text-muted">发现并利用</p>
+                                    </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
+                                    <div class="feature-item">
+                                        <img src="assets/icons/space/37-capsule parachute.svg" style="width:60%;">
+                                        <h3>火星规划</h3>
+                                        <p class="text-muted">生活在火星，规划火星</p>
+                                    </div>
+                                </div>
+                            <div class="col-md-4">
                                 <div class="feature-item">
-                                    <img src="assets/icons/space/20-ufo picture.svg" style="width:60%;">
-                                    <h3>系外行星</h3>
-                                    <p class="text-muted">遥远的世界，我们梦想所在。</p>
+                                    <img src="assets/icons/space/7-sun.svg" style="width:60%;">
+                                    <h3>太空农业</h3>
+                                    <p class="text-muted">不仅仅是吃饭的问题</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <img src="assets/icons/space/37-capsule parachute.svg" style="width:60%;">
-                                    <h3>火星规划</h3>
-                                    <p class="text-muted">生活在火星，规划火星。</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
+                            <div class="row">
+                                    <div class="col-md-4">
+                                            <div class="feature-item">
+                                                <img src="assets/icons/space/40-telescope.svg" style="width:60%;">
+                                                <h3>基础科学</h3>
+                                                <p class="text-muted">泛太阳系合作，更长的基线</p>
+                                            </div>
+             
+                                         </div>
+                                         <div class="col-md-4">
+                                             <div class="feature-item">
+                                                 <img src="assets/icons/space/20-ufo picture.svg" style="width:60%;">
+                                                 <h3>系外行星</h3>
+                                                 <p class="text-muted">遥远的世界，我们终将踏足</p>
+                                             </div>
+                                         </div>
+                            <div class="col-md-4">
                                <div class="feature-item">
                                    <img src="assets/icons/space/13-planetary.svg" style="width:60%;">
-                                   <h3>系统行星生态学</h3>
-                                   <p class="text-muted">生态不仅仅为了人类的生存，更是为了生命的和谐。</p>
+                                   <h3>行星生态</h3>
+                                   <p class="text-muted">关注每一个生命</p>
                                </div>
                             </div>
                         </div>
