--- a/_includes/front/you.html
+++ b/_includes/front/you.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading">你，最精彩</h2>
-                <p>与<a href="{{ site.url }}/members/" target="_blank" style="color:white;">我们</a>一起探索未来<a href="{{ site.url }}/members/" target="_blank"> <br> <button class="btn btn-sm">查看所有成员 </button></a></p>
+                <h2 class="section-heading"><a href="{{ site.url }}/members/" target="_blank" style="color:white;">我们</a>一起探索未来<a href="{{ site.url }}/members/" target="_blank"> </h2>
+                <p><button class="btn btn-sm">查看所有成员 </button></a></p>
             </div>
         </div>
         {% include front/join.html %}
